Update backend Validation part